--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');
+
 :root {
 	/* Primary Colors */
 	--very-dk-mag: hsl(300, 43%, 22%);
@@ -21,13 +23,13 @@ html {
 }
 
 body {
-  width: 100%;
+  width: 82%;
   height: 100vh;
-  background: url()
+  margin: 0 auto;
 }
 
 .title-sec {
-	width: 33%;
+	width: 45%;
 	height: 200px;
 	color: var(--very-dk-mag);
 }
@@ -36,4 +38,48 @@ body {
 	width: 80%;
 	font-size: 3rem;
 	margin-bottom: 30px;
+}
+
+.subtitle {
+	width: 90%;	
+}
+
+svg {
+	margin: 5px;
+	vertical-align: middle;
+}
+
+svg:last-of-type {
+	margin-right: 25px;
+}
+
+.star-ratings {
+	padding: 25px 0;
+}
+
+li {
+	width: 380px;
+	height: 50px;
+	font-weight: bold;
+	color: var(--very-dk-mag);
+	background-color: var(--lt-gray-mag);
+	border-radius: 10px;
+	padding: 13px 0 13px 10px;
+	margin-bottom: 15px;
+	list-style: none;
+}
+
+li:nth-of-type(2) {
+	margin-left: 35px;
+}
+
+li:last-of-type {
+	margin-left: 70px;
+}
+
+.upper-container {
+	margin-top: 10%;
+	margin-bottom: 3%;
+	display: flex;
+	justify-content: space-between;
 }
