--- a/style.css
+++ b/style.css
@@ -14,9 +14,6 @@
 	box-sizing: border-box;
 	font-family: 'League Spartan', sans-serif;
 	font-size: 0.9375rem;
-}
-
-html {
 	margin: 0;
 	padding: 0;
 }
@@ -26,53 +23,62 @@ body {
 	height: 100vh;
 	background-image: url(./images/bg-pattern-top-desktop.svg), url(./images/bg-pattern-bottom-desktop.svg);
 	background-position: top left, bottom right;
+	background-size: 40%, 80%;
 	background-repeat: no-repeat;
 }
 
 main {
-	width: 77%;
-	margin: 110px auto;
-
+	width: 90%;
+	margin: 100px auto;
 }
 
 .top {
+	width: inherit;
+	height: 250px;
 	display: flex;
+	justify-content: ;
 	align-items: center;
+	margin: 0 auto;
 }
 .title-sec {
-	max-width: 380px;
+	max-width: 630px;
 	height: 200px;
 	color: var(--very-dk-mag);
 }
 
 .hero-title {
 	font-weight: 700;
-	font-size: 3.3rem;
+	font-size: 5rem;
+	margin: 0;
+	margin-bottom: 40px;
 }
 
 .sub-title {
 	font-weight: 200;
-	font-size: 1.1rem;
+	font-size: 1.7rem;
 	line-height: 90%;
 }
 
 .rating-labels {
+	margin-left: 100px;
+	margin-top: 100px;
 	padding-left: 0;
-	max-width: 400px;
+	max-width: 520px;
 	height: 200px;
 }
 
 .labels {
-	width: 400px;
-	height: 45px;
+	width: 550px;
+	height: 65px;
 	border: none;
 	border-radius: 10px;
 	background-color: var(--lt-grayish-mag);
+	font-size: 1.5rem;
 	font-weight: 700;
 	color: var(--very-dk-mag);
 	display: flex;
 	align-items: center;
-	margin: 12px 0;
+	margin: 15px 0;
 }
 
 .labels:nth-of-type(2) {
@@ -88,7 +94,9 @@ main {
 }
 
 .star-icons img {
-	margin: 0 3px;
+	width: 16%;
+	height: 16%;
+	margin: 0 2px;
 }
 
 .reviews {
