--- a/style.css
+++ b/style.css
@@ -154,14 +154,14 @@ footer {
 		font-family: 'League Spartan', sans-serif;
 		text-align: center;
 		background-image: url(./images/bg-pattern-top-desktop.svg), url(./images/bg-pattern-bottom-desktop.svg);
-		background-position: top left, bottom right;
+		background-position: 0% 0%, 70% 30%;
 		background-repeat: no-repeat;
 	}
 
 	.top-section {
 		display: flex;
 		align-items: center;
-		margin-left: ;
+		gap: 230px;
 	}
 
 	/* title-section */
