--- a/style.css
+++ b/style.css
@@ -164,6 +164,12 @@ footer {
 		gap: 230px;
 	}
 
+	.review-section {
+		display: flex;
+		justify-content: space-between;
+		margin-top: 80px;
+	}
+
 	/* title-section */
 
 	.title-section {
@@ -218,5 +224,69 @@ footer {
 
 	.stars-labels:last-of-type {
 		margin-left: 110px;
+	}
+
+	/* Review Section */
+
+	.quote-review {
+		width: 454px;
+		height: 300px;
+		background-color: var(--very-dark-mag);
+		border: none;
+		border-radius: 10px;
+		margin-bottom: 0;
+		padding: 0;
+		text-align: left;
+	}
+
+	.quote-review:first-of-type {
+		margin-top: 0;
+	}
+
+	.quote-review:nth-of-type(2) {
+		margin-top: 15px;
+	}
+
+	.quote-review:last-of-type {
+		margin-top: 30px;
+	}
+
+	.name {
+		font-size: 20px;
+		width: 170px;
+		color: var(--white);
+		margin-bottom: 5px;
+		margin-left: 30px;
+	}
+
+	.status {
+		color: var(--soft-pink);
+		font-size: 20px;
+		margin-left: 30px;
+	}
+
+	.quote {
+		color: var(--white);
+	}
+
+	.quote-review img {
+		border-radius: 50%;
+		width: 60px;
+		margin-left: 50px;
+	}
+
+	.quote-review > p {
+		max-width: 364px;
+		font-size: 21px;
+		margin: 30px auto auto;
+		line-height: 1.7rem;
+	}
+
+	.reviewer {
+		width: 170px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin-top: 50px;
 	}
 }
